# K-algorithm-Visualizer-algorithm-using-CPP-

./: .clangd  CMakeLists.txt  README.md  passwordgenerator.cpp
.cache/clangd/index/: Centroid.cpp.FB5FD00D69F6665C.idx  Centroid.hpp.79D6573169D1FFC0.idx  KMeans.cpp.A2BF357FCE0A2B7E.idx  KMeans.hpp.6F10C49A0709F16D.idx  Point.cpp.707BF743CA81B2C0.idx  Point.hpp.202C55F9E036017B.idx  main.cpp.BF14D1A5DF4EB02E.idx
src/: Centroid.cpp  Centroid.hpp  KMeans.cpp  KMeans.hpp  Point.cpp  Point.hpp  main.cpp
